99053: Add return_to_pool option to all ProcessingAction except SingleUserReviewAction